name:                envconfig
version:             0.1.0.0
synopsis:            Utilities and combinators for parsing environment variables
description:         
    Heavily inspired by the optparse-applicative package, this package
    provides a library for parsing configuration information from
    environment variables.
homepage:            https://github.com/bhurt/envconfig#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Hurt
maintainer:          bhurt42@gmail.com
copyright:           2023 Brian Hurt
category:            Options, Parsing, Environment
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

Flag Devel
  Description:         Turn on warnings and turn off optimization.
  Default:             False

library
  hs-source-dirs:      src
  exposed-modules:     Config.Env,
                        Config.Env.Internal.Config,
                        Config.Env.Internal.Parsers
  build-depends:       base >= 4.7 && < 5
                        , aeson
                        , blaze-html
                        , bytestring
                        , directory
                        , filepath
                        , mtl
                        , selective
                        , text
  default-language:    Haskell2010
  if flag(devel)
    ghc-options:       -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Werror
                       -O0
  else
    ghc-options:       -O2

source-repository head
  type:     git
  location: https://github.com/bhurt/envconfig
